# vibecast-viewer

./: .dockerignore  .env.example  .gitignore  AWS_CREDENTIALS_SETUP.md  DEPLOY.md  Dockerfile  Dockerfile.ftp  Makefile  README.md  TODO.md  camera_capture.py  constants.py  deploy_first_time.sh  deploy_restart.sh  docker-compose.yml  entrypoint.sh  fly.toml  prompt.txt  pyproject.toml  requirements-ftp.txt  requirements.txt  session_viewer.py  tail_part.html  viewer_new.html
app/: analyzer.py  main.py  s3_service.py
app/templates/: analyzer.html  viewer.html
docs/: FTP_SERVER.md  RUNPOD_DEPLOYMENT.md
docs/plans/: 2026-02-13-image-rotation.md
ftp_server/: Dockerfile  README.md  server.py
scripts/: test_ftp.py
services/: ftp_server.py
tests/: test_ftp.py
viewer/: README.md  session_viewer.py
viewer/templates/: index.html  session.html
