[project]
name = "vibecast"
version = "0.0.1"
description = "Vibecast"
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "AI dan", email = "aidan3e4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "openai>=2.15.0",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "pyftpdlib>=2.1.0",
    "pysocks>=1.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "reolinkapi",
  "app",
  "vision_llm",
  "ftp_server"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
