[project]
name = "vibecast"
version = "0.0.1"
description = "Vibecast"
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "AI dan", email = "aidan3e4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "ruff>=0.14.13",
]
